--- a/hw_lesson_5.ipynb
+++ b/hw_lesson_5.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "bf99cc32-05ee-4e8c-b9f9-98e38d002483",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "f8866722-1a93-4e2b-9cb2-6e000ccb54ee",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "5ba43569-701c-4500-bd25-37461a54199b",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "ff6724a3-ecf0-4501-90fb-b1b15ad44abe",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "1dc40ea6-b20e-4d2c-b2f0-505acf077d1b",
    "metadata": {},
    "outputs": [
@@ -97,7 +97,7 @@
        "array([6.9, 6.1, 6.2, 6.8, 7.5, 6.3, 6.4, 6.9, 6.7, 6.1])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "id": "dfa1e39a-fc00-425e-9c61-0557237b515e",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,7 @@
        "0.4508017549014448"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "id": "75f5f0bc-1995-4ced-a50d-a3951f871ef7",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
        "6.590000000000001"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,29 +153,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "id": "483e5266-fb0e-4e6b-8523-d5a8c2badefb",
    "metadata": {},
    "outputs": [],
    "source": [
     "n = 10\n",
-    "Z_a2 = 1.96"
+    "t_a2 = 2.262"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "id": "d08de4a3-a95a-4367-8823-e9cb6223695e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X1 = X + Z_a2 * sigma/sqrt(n)\n",
-    "X2 = X - Z_a2 * sigma/sqrt(n)"
+    "X1 = X + t_a2 * sigma/sqrt(n)\n",
+    "X2 = X - t_a2 * sigma/sqrt(n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 10,
    "id": "250ff896-7839-4119-8e31-6332338b6074",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[6.3105901775368505, 6.869409822463151]\n"
+      "[6.267538255912426, 6.912461744087575]\n"
      ]
     }
    ],
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 11,
    "id": "244ba6ff-2d49-488f-aa53-7fba7c47f71d",
    "metadata": {},
    "outputs": [],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 12,
    "id": "0f2ebb9f-90d9-4698-82a8-093b1ac60b67",
    "metadata": {},
    "outputs": [
@@ -237,7 +237,7 @@
        "2.5"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 13,
    "id": "559ade6d-f2f5-4cd8-96a6-816e9c3ce510",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
        "array([202, 203, 199, 197, 195, 201, 200, 204, 194, 190])"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 14,
    "id": "52b83456-ac62-43c6-bff1-5d4b5f217906",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
        "198.5"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 15,
    "id": "461f5937-fd01-4850-bbce-d78e5db048cb",
    "metadata": {},
    "outputs": [],
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 16,
    "id": "c737ca7c-9255-44fe-aa7f-2edab630e555",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
        "4.453463071962462"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 17,
    "id": "4b54f321-c408-4806-84c0-4404c6d284e4",
    "metadata": {},
    "outputs": [
@@ -376,7 +376,7 @@
        "-1.0651074037450896"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
